--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,5 +8,6 @@ jobs:
         uses: actions/checkout@v4
       # Install npm dependencies, cache them correctly
       # and run all Cypress tests
+      #Git Hub action
       - name: Cypress run
         uses: cypress-io/github-action@v6
