--- a/.github/workflows/specificBuild.yml
+++ b/.github/workflows/specificBuild.yml
@@ -14,3 +14,9 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           command: npm run test:addToCart
+      # For generating HTML Reports
+      - name: Mochawesome HTML Test Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: Mochawesome HTML Report
+          path: cypress/reports/html
